# tui-prompts

./: .markdownlint.yaml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  bacon.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release-plz.yml  test.yml
examples/: multi_line.rs  multi_line.tape  password.rs  password.tape  text.rs  text.tape
examples/tui/: mod.rs
src/: lib.rs  password.rs  password_prompt.rs  password_state.rs  prompt.rs  status.rs  text_prompt.rs  text_state.rs
