[package]
name = "tui-prompts"
version = "0.3.10"
description = "A library for building interactive prompts for ratatui."
repository = "https://github.com/joshka/tui-prompts"
authors = ["Joshka"]
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = "0.26.2"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
indoc = "2.0.5"

[patch.crates-io]
# take advantage of the latest unreleased ratatui features
# ratatui = { git = "https://github.com/joshka/ratatui.git", branch = "main" }
# ratatui = { path = "../ratatui" }
