[package]
name = "tui-prompts"
version = "0.3.15"
description = "A library for building interactive prompts for ratatui."
repository = "https://github.com/joshka/tui-prompts"
authors = ["Joshka"]
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "gui"]
keywords = ["cli", "console", "ratatui", "terminal", "tui"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
ratatui = "0.27.0"
ratatui-macros = { version = "0.4.2" }
rstest = "0.21.0"

[dev-dependencies]
clap = { version = "4.5.8", features = ["derive"] }
color-eyre = "0.6.3"
indoc = "2.0.5"
